--- a/index.html
+++ b/index.html
@@ -12,13 +12,53 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-        <!-- Bootstrap CSS -->
+        <!-- Bootstrap and My CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/15d0a318eb.js" crossorigin="anonymous"></script>
+        <link href="dist/css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <nav id="#top" class="navbar navbar-dark navbar-expand-sm">
+            <div class="container">
+                <button class="navbar-toggler collapsed" id="collapsed-menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="navigation">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#education"><i class="fas fa-graduation-cap fa-lg"></i> Education</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills"><i class="fa fa-list fa-lg"></i> Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#experience"><i class="fas fa-suitcase fa-lg"></i> Work Experience</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#memberships"><i class="fas fa-users fa-lg"></i> Memberships</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact"><i class="fa fa-address-card fa-lg"></i> Contact</a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text">
+                        <a id="git-btn" href="https://github.com/DavitPetro" target="_blank" title="GitHub">
+                            <i class="fab fa-github fa-3x"></i>
+                        </a>
+                        <a id="linkedin-btn" href="https://www.linkedin.com/in/davit-petrosyan-5498b0171/" target="_blank" title="LinkedIn">
+                            <i class="fab fa-linkedin-in fa-3x"></i>
+                        </a>
+                    </span>
+                </div>
+            </div>
+        </nav>
 
+        <div id="up-arrow">
+            <a href="#top">
+                <i class="fas fa-arrow-circle-up fa-3x"></i>
+            </a>
+        </div>
+        <script src="https://kit.fontawesome.com/15d0a318eb.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="dist/js/app.js"></script>
     </body>
 </html>
