Container and Headings

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="dist/css/style.css" rel="stylesheet">
     </head>
     <body>
-        <nav id="#top" class="navbar navbar-dark navbar-expand-sm">
+        <nav id="#top" class="navbar navbar-dark navbar-expand-md">
             <div class="container">
                 <button class="navbar-toggler collapsed" id="collapsed-menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -51,7 +51,131 @@
                 </div>
             </div>
         </nav>
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-4 align-self-center">
+                        <img class="pfp" src="/images/profile-photo.jpg">
+                    </div>
+                    <div class="col-12 col-sm-6 align-self-center">
+                        <div class="media d-flex">
+                            <div class="media-body">
+                                <h1>Davit Petrosyan</h1>
+                                <h3>Computer Science Student at Millersville University of Pennsylvania</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </header>
+        <div class="container">
+            <div id="education" class="heading">
+                <h3 class="head-title">Education</h3>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 align-self-center">
+                    <div class="media d-flex">
+                        <img class=" logo me-3 img-fluid" src="images/ville-u-clipart.png" alt="Millersville U Logo">
+                        <div class="media-body">
+                            <h4 class="mt-0">
+                                Millersville University of Pennsylvania (Aug 2018 <i class="fas fa-arrow-right"></i> May 2022)
+                            </h4>
+                            <div class="d-none d-sm-block">
+                                <h5>Bachelor's Degree: Computer Science</h5>
+                                <h5>Minor: Mathematics</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Relevant Coursework</h4>
+                        </div>
+                        <div class="card-body row">
+                            <ul class="col-5 cw-col">
+                                <li>Software Engineering</li>
+                                <li>Database and Web Development</li>
+                                <li>Advanced Web Development</li>
+                                <li>Data Structures and Algorithms</li>
+                                <li>Artificial Intelligence</li>
+                            </ul>
+                            <ul class="col-5 cw-col">
+                                <li>Operating Systems</li>
+                                <li>Computer Architecture</li>
+                                <li>Computational Models</li>
+                                <li>Programming Languages</li>
+                                <li>Discrete Structures</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="skills" class="heading">
+                <h3 class="head-title">Skills</h3>
+            </div>
+            <div class="row container">
+                <div class="row">
+                    <div class="heading">
+                        <h5>Most Experience</h5>
+                        <div class="col-12">
+                            <ul class="languages">
+                                <li>Javascript (NodeJS, Express)</li>
+                                <li>CSS</li>
+                                <li>HTML</li>
+                                <li>Python</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="heading">
+                        <h5>Some Experience</h5>
+                        <div class="col-12">
+                            <ul class="languages">
+                                <li>Testing</li>
+                                <li>Debugging</li>
+                                <li>C++ (Data Structures and Algorithms)</li>
+                                <li>PHP</li>
+                                <li>Java</li>
+                                <li>Lisp (Search Algorithms)</li>
+                                <li>SQL</li>
+                                <li>MongoDB</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div>
+                        <h5>Minimnal Experience</h5>
+                        <div class="col-12">
+                            <ul class="languages">
+                                <li>C (Operating Systems)</li>
+                                <li>OCaml</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="experience" class="heading">
+                <h3 class="head-title">Work Experience</h3>
+            </div>
+            <div class="row">
 
+            </div>
+            <div id="memberships" class="heading">
+                <h3 class="head-title">Memberships</h3>
+            </div>
+            <div class="row">
+                
+            </div>
+            <div id="contact" class="heading">
+                <h3 class="head-title">Contact</h3>
+            </div>
+            <div class="row">
+                
+            </div>
+        </div>
+    </div>
         <div id="up-arrow">
             <a href="#top">
                 <i class="fas fa-arrow-circle-up fa-3x"></i>
