--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="#memberships"><i class="fas fa-users fa-lg"></i> Memberships</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact"><i class="fa fa-address-card fa-lg"></i> Contact</a>
+                            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#contact-modal"><i class="fa fa-address-card fa-lg"></i> Contact</a>
                         </li>
                     </ul>
                     <span class="navbar-text">
@@ -67,6 +67,7 @@
                     </div>
                 </div>
         </header>
+        <!-- Page Content -->
         <div class="container">
             <div id="education" class="heading">
                 <h3 class="head-title">Education</h3>
@@ -77,7 +78,7 @@
                         <img class=" logo me-3 img-fluid" src="images/ville-u-clipart.png" alt="Millersville U Logo">
                         <div class="media-body">
                             <h4 class="mt-0">
-                                Millersville University of Pennsylvania (Aug 2018 <i class="fas fa-arrow-right"></i> May 2022)
+                                Millersville University of Pennsylvania, Aug. 2018 <i class="fas fa-arrow-right"></i> May 2022
                             </h4>
                             <div class="d-none d-sm-block">
                                 <h5>Bachelor's Degree: Computer Science</h5>
@@ -160,26 +161,119 @@
                 <h3 class="head-title">Work Experience</h3>
             </div>
             <div class="row">
-
+                <div class="col-12 mt-3 align-self-center">
+                    <div class="media d-flex">
+                        <img class=" logo me-3 img-fluid" src="images/subvenio.jpg" alt="Subvenio Technologies">
+                        <div class="media-body">
+                            <h4 class="mt-0">
+                                Subvenio Technologies, Aug. 2021 <i class="fas fa-arrow-right"></i> Dec. 2021
+                            </h4>
+                            <div class="d-none d-sm-block">
+                                <h5>Position: Web Development Intern</h5>
+                                <h5>Responsibilities: </h5>
+                                <ul class="responsibilities">
+                                    <li>Designing websites for clients.</li>
+                                    <li>Creating content for websites.</li>
+                                    <li>Updating and maintaining websites.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 mt-3 align-self-center">
+                    <div class="media d-flex">
+                        <img class=" logo me-3 img-fluid" src="images/ville-u-clipart.png" alt="Millersville U Logo">
+                        <div class="media-body">
+                            <h4 class="mt-0">
+                                Millersville University, Jan. 2021 <i class="fas fa-arrow-right"></i> Dec 2021
+                            </h4>
+                            <div class="d-none d-sm-block">
+                                <h5>Position: Computer Science Tutor</h5>
+                                <h5>Responsibilities: </h5>
+                                <ul class="responsibilities">
+                                    <li>Providing learning assistance to computer science students both individually and in groups.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="memberships" class="heading">
                 <h3 class="head-title">Memberships</h3>
             </div>
-            <div class="row">
-                
+            <div class="row separate">
+                <div class="col-12 mt-3 align-self-center">
+                    <div class="media d-flex">
+                        <img class="stg-logo me-3 img-fluid" src="images/sig-tau-crest.png" alt="Sigma Tau Gamma Crest">
+                        <div class="media-body">
+                            <h4 class="mt-0">
+                                Sigma Tau Gamma (ΣΤΓ), Sept. 2019 <i class="fas fa-arrow-right"></i> Present
+                            </h4>
+                            <div class="d-none d-sm-block">
+                                <h5>Offices Held: </h5>
+                                <ul class="languages">
+                                    <li>Director of Academics and Wellness, Oct. 2020 <i class="fas fa-arrow-right"></i> Oct. 2021</li>
+                                    <li>New Member Leader, Sept. 2020 <i class="fas fa-arrow-right"></i> Nov. 2020</li>
+                                </ul>    
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div id="contact" class="heading">
-                <h3 class="head-title">Contact</h3>
-            </div>
             <div class="row">
-                
+                <div class="col-12 mt-3 mb-3 align-self-center">
+                    <a id="contact-btn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contact-modal">Contact Me</a>
+                </div>
             </div>
         </div>
-    </div>
         <div id="up-arrow">
             <a href="#top">
                 <i class="fas fa-arrow-circle-up fa-3x"></i>
             </a>
+        </div>
+        <!-- Contact Modal -->
+        <div id="contact-modal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg" role="content">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Contact Me </h4>
+                        <button type="button" class="btn" data-bs-dismiss="modal"><i class="fas fa-times"></i></button>
+                    </div>
+                    <div class="modal-body">
+                        <form class="row g-3">
+                            <div class="col-md-6">
+                                <label for="firstname" class="form-label">First Name </label>
+                                <input type="text" id="firstname" class="form-control" name="firstname" required>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="lastname" class="form-label">Last Name </label>
+                                <input type="text" id="lastname" class="form-control" name="lastname" required>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="email" class="form-label">Email </label>
+                                <input type="email" id="email" class="form-control" name="email">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="phone" class="form-label">Phone # </label>
+                                <input type="tel" id="phone" class="form-control" name="phone">
+                            </div>
+                            <div class="col-12">
+                                <label for="company" class="form-label">Company</label>
+                                <input type="text" id="company" class="form-control" name="company">
+                            </div>
+                            <div class="col-12">
+                                <textarea id="message" class="form-control" name="message" placeholder="Type Message Here..." rows="3"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Send Message</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="https://kit.fontawesome.com/15d0a318eb.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
