--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </div>
             <div class="row">
                 <div class="col-12 mt-3 mb-3 align-self-center">
-                    <a id="contact-btn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contact-modal">Contact Me</a>
+                    <a id="contact-btn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contact-modal">Contact</a>
                 </div>
             </div>
         </div>
@@ -238,7 +238,7 @@
             <div class="modal-dialog modal-lg" role="content">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title">Contact Me </h4>
+                        <h4 class="modal-title">Contact</h4>
                         <button type="button" class="btn" data-bs-dismiss="modal"><i class="fas fa-times"></i></button>
                     </div>
                     <div class="modal-body">
