--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                                 Millersville University of Pennsylvania, Aug. 2018 <i class="fas fa-arrow-right"></i> May 2022
                             </h4>
                             <div class="d-none d-sm-block">
-                                <h5>Bachelor's Degree: Computer Science</h5>
-                                <h5>Minor: Mathematics</h5>
+                                <h6>Pursuing a Bachelor's Degree in Computer Science and a minor in Mathematics</h6>
+                                <h6>Dean's List: Spring 2019, 2020, 2021. Fall 2021</h6>
+                                <h6>GPA: 3.54</h6>
                             </div>
                         </div>
                     </div>
@@ -238,30 +239,25 @@
             <div class="modal-dialog modal-lg" role="content">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title">Contact</h4>
+                        <h4 class="modal-title">Contact Me</h4>
                         <button type="button" class="btn" data-bs-dismiss="modal"><i class="fas fa-times"></i></button>
                     </div>
                     <div class="modal-body">
                         <form class="row g-3">
                             <div class="col-md-6">
-                                <label for="firstname" class="form-label">First Name </label>
-                                <input type="text" id="firstname" class="form-control" name="firstname" required>
+                                <input type="text" id="firstname" class="form-control" name="firstname" placeholder="First Name" required>
                             </div>
                             <div class="col-md-6">
-                                <label for="lastname" class="form-label">Last Name </label>
-                                <input type="text" id="lastname" class="form-control" name="lastname" required>
+                                <input type="text" id="lastname" class="form-control" name="lastname" placeholder="Last Name" required>
                             </div>
                             <div class="col-md-6">
-                                <label for="email" class="form-label">Email </label>
-                                <input type="email" id="email" class="form-control" name="email">
+                                <input type="email" id="email" class="form-control" name="email" placeholder="Email" required>
                             </div>
                             <div class="col-md-6">
-                                <label for="phone" class="form-label">Phone # </label>
-                                <input type="tel" id="phone" class="form-control" name="phone">
+                                <input type="tel" id="phone" class="form-control" name="phone" placeholder="Phone # (optional)">
                             </div>
                             <div class="col-12">
-                                <label for="company" class="form-label">Company</label>
-                                <input type="text" id="company" class="form-control" name="company">
+                                <input type="text" id="subject" class="form-control" name="subject" placeholder="Subject">
                             </div>
                             <div class="col-12">
                                 <textarea id="message" class="form-control" name="message" placeholder="Type Message Here..." rows="3"></textarea>
