--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="media d-flex">
                             <div class="media-body">
                                 <h1>Davit Petrosyan</h1>
-                                <h3>Computer Science Student at Millersville University of Pennsylvania</h3>
+                                <h3>Computer Science Graduate</h3>
                             </div>
                         </div>
                     </div>
@@ -81,9 +81,13 @@
                                 Millersville University of Pennsylvania, Aug. 2018 <i class="fas fa-arrow-right"></i> May 2022
                             </h4>
                             <div class="d-none d-sm-block">
-                                <h6>Pursuing a Bachelor's Degree in Computer Science and a minor in Mathematics</h6>
-                                <h6>Dean's List: Spring 2019, 2020, 2021. Fall 2021</h6>
-                                <h6>GPA: 3.54</h6>
+                                <h6>Bachelor's Degree in Computer Science and Minor in Mathematics</h6>
+                                <h6>GPA: 3.56</h6>
+                                <h6>Honors: </h6>
+                                <ul>
+                                    <li>Cum Laude</li>
+                                    <li>Dean’s List Spring 2019, 2020, 2021, 2022; Fall 2021.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -99,14 +103,14 @@
                                 <li>Database and Web Development</li>
                                 <li>Advanced Web Development</li>
                                 <li>Data Structures and Algorithms</li>
-                                <li>Artificial Intelligence</li>
+                                <li>Computer Networks</li>
                             </ul>
                             <ul class="col-5 cw-col">
                                 <li>Operating Systems</li>
                                 <li>Computer Architecture</li>
                                 <li>Computational Models</li>
                                 <li>Programming Languages</li>
-                                <li>Discrete Structures</li>
+                                <li>Artificial Intelligence</li>                           
                             </ul>
                         </div>
                     </div>
@@ -121,7 +125,7 @@
                         <h5>Most Experience</h5>
                         <div class="col-12">
                             <ul class="languages">
-                                <li>Javascript (NodeJS, Express)</li>
+                                <li>Javascript (NodeJS)</li>
                                 <li>CSS</li>
                                 <li>HTML</li>
                                 <li>Python</li>
@@ -188,7 +192,7 @@
                         <img class=" logo me-3 img-fluid" src="images/ville-u-clipart.png" alt="Millersville U Logo">
                         <div class="media-body">
                             <h4 class="mt-0">
-                                Millersville University, Jan. 2021 <i class="fas fa-arrow-right"></i> Dec 2021
+                                Millersville University, Jan. 2021 <i class="fas fa-arrow-right"></i> May 2022
                             </h4>
                             <div class="d-none d-sm-block">
                                 <h5>Position: Computer Science Tutor</h5>
@@ -210,7 +214,7 @@
                         <img class="stg-logo me-3 img-fluid" src="images/sig-tau-crest.png" alt="Sigma Tau Gamma Crest">
                         <div class="media-body">
                             <h4 class="mt-0">
-                                Sigma Tau Gamma (ΣΤΓ), Sept. 2019 <i class="fas fa-arrow-right"></i> Present
+                                Sigma Tau Gamma (ΣΤΓ), Active Sept. 2019 <i class="fas fa-arrow-right"></i> May 2022
                             </h4>
                             <div class="d-none d-sm-block">
                                 <h5>Offices Held: </h5>
