--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h5>Most Experience</h5>
                         <div class="col-12">
                             <ul class="languages">
-                                <li>Javascript (NodeJS)</li>
+                                <li>Javascript (React, NodeJS)</li>
                                 <li>CSS</li>
                                 <li>HTML</li>
                                 <li>Python</li>
