Update Info and Some Style

--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
                             <a class="nav-link" href="#experience"><i class="fas fa-suitcase fa-lg"></i> Work Experience</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#memberships"><i class="fas fa-users fa-lg"></i> Memberships</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" data-bs-toggle="modal" data-bs-target="#contact-modal"><i class="fa fa-address-card fa-lg"></i> Contact</a>
                         </li>
                     </ul>
@@ -116,12 +113,137 @@
                     </div>
                 </div>
             </div>
+            <div id="experience" class="heading">
+                <h3 class="head-title">Work Experience</h3>
+            </div>
+            <div class="row separate">
+                <div class="col-12 mt-3 align-self-center">
+                    <div class="media d-flex">
+                        <img class=" logo mt-3 me-3 img-fluid h-75 " src="images/ville-u-clipart.png" alt="Millersville University">
+                        <div class="media-body w-75">
+                            <h4 class="mt-0">
+                                Millersville University, Feb. 2023 <i class="fas fa-arrow-right"></i> Present
+                            </h4>
+                            <h5>Position: Research Assistant</h5>
+                            <h5>Software engineering project led by Chad Hogg, a computer science professor at Millersville University.</h5>
+                            <div class="row">
+                                <div class="col-md-7 col-12 col-sm-12">
+                                    <h5 class="card-header">Responsibilities: </h5>
+                                    <ul class="responsibilities">
+                                        <li>Building and analyzing the performance of a software system that schedules incoming students into their course sections.</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-5 col-12 col-sm-12">
+                                    <h5 class="card-header">Skills Used/Learned:</h5>
+                                    <ul class="d-sm-block">
+                                        <li>Python</li>
+                                        <li>Z3</li>
+                                        <li>Software Engineering</li>
+                                        <li>Machine Learning</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row separate">
+                <div class="col-12 mt-3 align-self-center">
+                    <div class="media d-flex">
+                        <img class=" logo mt-3 me-3 img-fluid h-75 " src="images/entegee.png" alt="Entegee">
+                        <div class="media-body w-75">
+                            <h4 class="mt-0">
+                                Entegee, Aug. 2022 <i class="fas fa-arrow-right"></i> Feb. 2023
+                            </h4>
+                            <div class = "row">
+                                <div class="col-md-7 col-sm-12 col-12 mt-3">
+                                    <h5>Position: Engineer at Harley Davidson Motor Company</h5>
+                                </div>
+                                <div class="col-md-5 col-sm-12 col-12 img-fluid mb-2 ms-0">
+                                    <img class="harley-logo" src="images/harley.png" alt="Entegee">
+                                </div>    
+                            </div>
+                            <div class="row">
+                                <div class="col-md-7 col-12 col-sm-12">
+                                    <h5 class="card-header">Description: </h5>
+                                    <p class="responsibilities">
+                                        Contract role for a Tactical Engineer at Harley Davidson Motor Company based in York, PA,
+                                        The position provides support for a variety of machining and assembly processes, including CNC and other automation equipment. 
+                                        Responsibilities include improving machine learning and assembly processes by ensuring that parts and assemblies are processed to meet optimum 
+                                        quality, quantity, and cost requirements.
+                                    </p>
+                                </div>
+                                <div class="col-md-5 col-12 col-sm-12">
+                                    <h5 class="card-header">Skills Used/Learned:</h5>
+                                    <ul class="d-sm-block">
+                                        <li>PLC (Programmable Logic Controller)</li>
+                                        <li>Supervisory Skills</li>
+                                        <li>Communication</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row separate">
+                <div class="col-12 mt-3 align-self-center">
+                    <div class="media d-flex">
+                        <img class=" logo me-3 img-fluid" src="images/subvenio.jpg" alt="Subvenio Technologies">
+                        <div class="media-body w-75">
+                            <h4 class="mt-0">
+                                Subvenio Technologies, Aug. 2021 <i class="fas fa-arrow-right"></i> Dec. 2021
+                            </h4>
+                            <h5>Position: Web Development Intern</h5>
+                            <div class="row">
+                                <div class="col-md-7 col-12 col-sm-12">
+                                    <h5 class="card-header">Responsibilities: </h5>
+                                    <ul class="responsibilities">
+                                        <li>Designing websites for clients.</li>
+                                        <li>Creating content for websites.</li>
+                                        <li>Updating and maintaining websites.</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-5 col-12 col-sm-12">
+                                    <h5 class="card-header">Skills Used/Learned:</h5>
+                                    <ul class="d-sm-block">
+                                        <li>Wordpress</li>
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row separate">
+                <div class="col-12 mt-3 align-self-center">
+                    <div class="media d-flex">
+                        <img class=" logo me-3 img-fluid" src="images/ville-u-clipart.png" alt="Millersville University">
+                        <div class="media-body w-75">
+                            <h4 class="mt-0">
+                                Millersville University, Jan. 2021 <i class="fas fa-arrow-right"></i> May 2022
+                            </h4>
+                            <h5>Position: Computer Science Tutor</h5>
+                            <div class="row">
+                                <div class="col-12 col-sm-12">
+                                    <h5 class="card-header">Responsibilities: </h5>
+                                    <ul class="responsibilities">
+                                        <li>Providing learning assistance to computer science students both individually and in groups.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="skills" class="heading">
                 <h3 class="head-title">Skills</h3>
             </div>
             <div class="row container">
                 <div class="row">
-                    <div class="heading">
+                    <div class="separate">
                         <h5>Most Experience</h5>
                         <div class="col-12">
                             <ul class="languages">
@@ -134,7 +256,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="heading">
+                    <div class="separate">
                         <h5>Some Experience</h5>
                         <div class="col-12">
                             <ul class="languages">
@@ -150,7 +272,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row separate">
                     <div>
                         <h5>Minimnal Experience</h5>
                         <div class="col-12">
@@ -162,50 +284,7 @@
                     </div>
                 </div>
             </div>
-            <div id="experience" class="heading">
-                <h3 class="head-title">Work Experience</h3>
-            </div>
-            <div class="row">
-                <div class="col-12 mt-3 align-self-center">
-                    <div class="media d-flex">
-                        <img class=" logo me-3 img-fluid" src="images/subvenio.jpg" alt="Subvenio Technologies">
-                        <div class="media-body">
-                            <h4 class="mt-0">
-                                Subvenio Technologies, Aug. 2021 <i class="fas fa-arrow-right"></i> Dec. 2021
-                            </h4>
-                            <div class="d-none d-sm-block">
-                                <h5>Position: Web Development Intern</h5>
-                                <h5>Responsibilities: </h5>
-                                <ul class="responsibilities">
-                                    <li>Designing websites for clients.</li>
-                                    <li>Creating content for websites.</li>
-                                    <li>Updating and maintaining websites.</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mt-3 align-self-center">
-                    <div class="media d-flex">
-                        <img class=" logo me-3 img-fluid" src="images/ville-u-clipart.png" alt="Millersville U Logo">
-                        <div class="media-body">
-                            <h4 class="mt-0">
-                                Millersville University, Jan. 2021 <i class="fas fa-arrow-right"></i> May 2022
-                            </h4>
-                            <div class="d-none d-sm-block">
-                                <h5>Position: Computer Science Tutor</h5>
-                                <h5>Responsibilities: </h5>
-                                <ul class="responsibilities">
-                                    <li>Providing learning assistance to computer science students both individually and in groups.</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="memberships" class="heading">
+<!--        <div id="memberships" class="heading">
                 <h3 class="head-title">Memberships</h3>
             </div>
             <div class="row separate">
@@ -227,6 +306,7 @@
                     </div>
                 </div>
             </div>
+-->
             <div class="row">
                 <div class="col-12 mt-3 mb-3 align-self-center">
                     <a id="contact-btn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contact-modal">Contact</a>
