Fix Image Sizing

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                                 <div class="col-md-7 col-sm-12 col-12 mt-3">
                                     <h5>Position: Engineer at Harley Davidson Motor Company</h5>
                                 </div>
-                                <div class="col-md-5 col-sm-12 col-12 img-fluid mb-2 ms-0">
-                                    <img class="harley-logo" src="images/harley.png" alt="Entegee">
+                                <div class="col-md-5 col-sm-12 col-12">
+                                    <img class="harley-logo img-fluid mb-2 ms-0" src="images/harley.png" alt="Harley Davidson Motor Company">
                                 </div>    
                             </div>
                             <div class="row">
